# esource-rust

./: .env.example  Cargo.toml  README.md  clippy.toml  docker-compose.yml  project.md  requests.http  rustfmt.toml
.sqlx/: query-15c8b0c3880c8730c6ac0558e4ba23de81d50d7ca942b874d193d6e74f9ffc90.json  query-32a900f66aa183aea91aab1840ebd347f59282615e5bb287abe39520f35a9b2d.json  query-5695d072f14e7654388753a339eaf30a1f2c0fe939781e978351fc86cdc9bdda.json  query-595ee875706feeb8875a40075935cce7df56e0b6d8184e26f7695509f33f7a08.json  query-71d9805af92ccb95c02384624d6bcc633e28036e094fcc739b7691c271e8a4d2.json  query-754cdea49c641fed22bb03391c1e9b37cdbd15b8ce7733e9cbe1bc8500ef8632.json  query-82fc5cf643663ec68218fe518d18f0136d5fea0a3258d7189a78a1d29a4a1b3f.json  query-983908c71f716f55c331ebd4bb2bd67e0e25ec7e60a0c08c01250ae6f534106a.json  query-d3ccd50ef5012c6dc1a41e8e0375c00f316314a5e9169018e16b060bd59e1c1b.json  query-e84df2ad5d8dcca8a54a42a0cfcea53fffa68c5a0ec1458d8ec79d245c1cb45e.json  query-f4995cb6b8e7df1ca3019bf9e712f62e18c7533ff7c835c962bd214cc120ed50.json
docs/: database.md  flow.md  structure.md
docs/skills.md/: skill-principal.md
migrations/: 20260321212915_init.sql
src/: main.rs
src/accounting/: mod.rs
src/accounting/application/: command_handler.rs  mod.rs  query_handler.rs  replay.rs  traits.rs
src/accounting/domain/: aggregate.rs  command.rs  errors.rs  event.rs  mod.rs  types.rs
src/accounting/infra/: mod.rs
src/accounting/infra/http/: handlers.rs  queries.rs
src/accounting/infra/pg/: event_store.rs
src/accounting/worker/: projection.rs
